[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Roads/Gem.gd" type="Script" id=1]
[ext_resource path="res://Utilities/3D/HoverLabel3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Gems/crystal.glb" type="PackedScene" id=3]

[sub_resource type="PrismMesh" id=2]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.462745, 0.996078, 0.976471, 1 )

[sub_resource type="ArrayMesh" id=5]
surfaces/0 = {
"aabb": AABB( -0.526726, -0.529881, -0.530773, 1.05345, 1.06567, 1.06156 ),
"array_data": PoolByteArray( 85, 73, 135, 188, 247, 40, 9, 63, 187, 224, 7, 63, 0, 0, 127, 64, 85, 49, 0, 0, 84, 73, 135, 188, 247, 40, 9, 63, 187, 224, 7, 191, 127, 127, 129, 64, 170, 58, 0, 0, 85, 73, 135, 188, 247, 40, 9, 63, 187, 224, 7, 63, 0, 0, 127, 64, 85, 49, 0, 0, 84, 73, 135, 188, 247, 40, 9, 63, 187, 224, 7, 191, 127, 127, 129, 64, 170, 58, 0, 0, 134, 215, 6, 191, 67, 166, 7, 191, 67, 166, 7, 63, 0, 0, 127, 64, 0, 0, 0, 56, 134, 215, 6, 63, 67, 166, 7, 191, 67, 166, 7, 191, 127, 127, 129, 64, 85, 57, 0, 56, 134, 215, 6, 63, 67, 166, 7, 191, 67, 166, 7, 63, 0, 0, 127, 64, 85, 53, 0, 56, 134, 215, 6, 191, 67, 166, 7, 191, 67, 166, 7, 191, 127, 127, 129, 64, 0, 60, 0, 56, 85, 73, 135, 188, 247, 40, 9, 63, 187, 224, 7, 63, 84, 42, 127, 127, 85, 53, 0, 0, 84, 73, 135, 188, 247, 40, 9, 63, 187, 224, 7, 191, 172, 42, 0, 63, 0, 0, 0, 56, 84, 73, 135, 188, 247, 40, 9, 63, 187, 224, 7, 191, 84, 42, 127, 127, 85, 57, 0, 0, 85, 73, 135, 188, 247, 40, 9, 63, 187, 224, 7, 63, 172, 42, 0, 63, 85, 53, 0, 56, 134, 215, 6, 63, 67, 166, 7, 191, 67, 166, 7, 63, 84, 42, 127, 127, 85, 53, 0, 56, 134, 215, 6, 191, 67, 166, 7, 191, 67, 166, 7, 191, 172, 42, 0, 63, 0, 0, 0, 60, 134, 215, 6, 63, 67, 166, 7, 191, 67, 166, 7, 191, 84, 42, 127, 127, 85, 57, 0, 56, 134, 215, 6, 191, 67, 166, 7, 191, 67, 166, 7, 63, 172, 42, 0, 63, 85, 53, 0, 60, 134, 215, 6, 191, 67, 166, 7, 191, 67, 166, 7, 63, 0, 129, 127, 64, 85, 57, 0, 56, 134, 215, 6, 63, 67, 166, 7, 191, 67, 166, 7, 63, 0, 129, 127, 64, 0, 60, 0, 56, 134, 215, 6, 191, 67, 166, 7, 191, 67, 166, 7, 191, 0, 129, 127, 64, 85, 57, 0, 60, 134, 215, 6, 63, 67, 166, 7, 191, 67, 166, 7, 191, 0, 129, 127, 64, 0, 60, 0, 60 ),
"array_index_data": PoolByteArray( 2, 0, 4, 0, 6, 0, 3, 0, 5, 0, 7, 0, 8, 0, 12, 0, 10, 0, 10, 0, 12, 0, 14, 0, 9, 0, 13, 0, 11, 0, 11, 0, 13, 0, 15, 0, 16, 0, 18, 0, 17, 0, 17, 0, 18, 0, 19, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 24,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 20
}

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.976471, 1, 0, 1 )
emission_enabled = true
emission = Color( 0.917647, 1, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="ConcavePolygonShape" id=8]
data = PoolVector3Array( 0, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0, 0.5, 0.5, 0, 0.5, -0.5, 0.5, -0.5, 0.5, 0, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0, 0.5, -0.5, 0, 0.5, 0.5, -0.5, -0.5, -0.5, 0, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5 )

[node name="Gem" type="Area"]
script = ExtResource( 1 )

[node name="crystal" parent="." instance=ExtResource( 3 )]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance"]
visible = false
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 8 )

[node name="HoverLabel3D" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15533, 0 )

[connection signal="input_event" from="." to="." method="_on_Gem_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Gem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Gem_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Gem_pressed"]
